[package]
name = "redis-cli"
version = "0.1.0"
edition = "2021"
description = "A simple cli to interact with Redis"
repository = "https://github.com/whohideonbug/redis-cli"
license = "MIT"

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
redis-wrapper = "0.1.0"
tokio = { version = "1.37.0", features = ["full"] }
